# equisense-ai

./: .gitignore  ARCHITECTURE.md  COMPREHENSIVE_DOCUMENTATION.md  DESIGN.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  GIT_PUSH_READY.md  IMPLEMENTATION_COMPLETE.md  Modelfile  NEXT_STEPS.md  PERPLEXITY_FALLBACK_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_AUDIT_2025-10-13.md  SETUP_GUIDE.md  docker-compose.langfuse.yml  docker-compose.yml  env.template  package-lock.json  pyproject.toml  pytest.ini  test_dcf_fix.py  verify_recommendation.py
agentic-stock-research/: .env.example  Modelfile
agentic-stock-research/app/: app_logging.py  config.py  logging.py  main.py  performance_monitor.py
agentic-stock-research/app/api/: auth.py  backtesting.py  institutional.py  monitoring.py  performance.py  portfolio.py  realtime.py  reports.py
agentic-stock-research/app/auth/: user_manager.py
agentic-stock-research/app/backtesting/: engine.py
agentic-stock-research/app/cache/: cache_warmer.py  optimized_cache.py  redis_cache.py
agentic-stock-research/app/db/: portfolio_manager.py
agentic-stock-research/app/graph/: state.py  workflow.py
agentic-stock-research/app/monitoring/: __init__.py  alert_engine.py  notification_service.py  performance_monitor.py
agentic-stock-research/app/optimization/: __init__.py
agentic-stock-research/app/reporting/: pdf_generator.py
agentic-stock-research/app/schemas/: input.py  institutional_output.py  output.py
agentic-stock-research/app/security/: __init__.py  auth.py
agentic-stock-research/app/tools/: analyst_recommendations.py  bse_nse_filings.py  bulk_analyzer.py  cashflow.py  comprehensive_scoring.py  data_federation.py  dcf_valuation.py  deep_financial_analysis.py  earnings_call_analyzer.py  finance.py  financial_nlp.py  fundamentals.py  governance_analysis.py  growth_prospects.py  horizon_filtering.py  indian_market_data.py  indian_market_data_v2.py  insider_tracker.py  institutional_analysis.py  institutional_formatter.py  leadership.py  llm_orchestrator.py  news.py  nlp.py  peer_analysis.py  perplexity_client.py  realtime_data.py  screener_scraper.py  sec_edgar.py  sector_macro.py  sector_rotation.py  strategic_conviction.py  ticker_mapping.py  valuation.py  valuepickr_scraper.py  youtube.py
agentic-stock-research/app/utils/: async_utils.py  circuit_breaker.py  context_manager.py  formatting.py  rate_limiter.py  retry.py  session_manager.py  technical_indicators.py  validation.py
agentic-stock-research/docs/: BULK_RANKING_FEATURE.md  request_flow.md
agentic-stock-research/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agentic-stock-research/frontend/src/: App.tsx  index.css  main.tsx
agentic-stock-research/tests/: conftest.py
agentic-stock-research/tests/integration/: test_api.py  test_hdfc_validation.py  test_indian_workflow.py  test_workflow.py
agentic-stock-research/tests/unit/: debug_bulk_stocks.ipynb  test_comprehensive_scoring.py  test_dcf_valuation.py  test_enhancements.py  test_indian_market_data_v2.py
docs/: VALIDATION_GUIDE.md
docs/archive/: FUTURE_INITIATIVES.md
docs/fixes/: BUG_FIXES_VALIDATION.md  CRITICAL_FIXES_2025-10-13.md
examples/: indian_data_federation_example.py
scripts/: cli.py  dev.sh  gen_graph_diagram.py  pids.sh  start.sh  stop.sh
tests/: test_api.py
(+69 files in other folders)
